--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       distractionFreeMode: false
     };
     window.$docsify = { 
-      repo: 'https://github.com/TYB-LuoYun',
+      // repo: 'https://github.com/TYB-LuoYun',
       auto2top: true,
       coverpage: true,
       loadSidebar: false,
