--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
 <div id="app"></div>
 <script>
     var gitalkConfig = {
-      clientID: '4a657aa4ae6c0f1862a1',
-      clientSecret: '94793d5bac0c884a8798ea941f7c5bc9fb004720',
-      repo: 'fuzhengwei.github.io',
-      owner: 'fuzhengwei',
-      admin: ["fuzhengwei"],
+      clientID: 'c3bb49abd3262c94b58f',
+      clientSecret: '04fb1a752af38b81a32ee93b713d5d8dea391dc1',
+      repo: 'tyb-luoyun.github.io',
+      owner: 'tyb-luoyun',
+      admin: ["tyb-luoyun"], 
+      id: location.pathname,
       distractionFreeMode: false
     };
     window.$docsify = { 
       // repo: 'https://github.com/TYB-LuoYun',
       auto2top: true,
-      coverpage: true,
-      loadSidebar: false,
-      maxLevel: 4,
-      subMaxLevel: 2,
+      coverpage: false,
+      loadSidebar: true,
+      maxLevel: 6,
+      subMaxLevel: 6,
       search: {
         paths: 'auto',
         placeholder: '🔍 Type to search ',
